catkin_ws/logs/backend/build.make.172.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:266:104: error: no matching function for call to ‘drawMatches(const cv::Mat&, const std::vector<cv::KeyPoint>&, const cv::Mat&, const std::vector<cv::KeyPoint>&, std::vector<int>&, cv::Mat&, cv::Scalar_<double>, cv::Scalar_<double>, std::vector<char>, cv::DrawMatchesFlags::<anonymous enum>)’
    imgMatch,Scalar::all(-1), Scalar::all(-1), vector<char>(), DrawMatchesFlags::NOT_DRAW_SINGLE_POINTS );
                                                                                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:266:104: note: candidates are:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/IFeatures.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:18,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:14:
/opt/opencv3/include/opencv2/features2d.hpp:1104:19: note: void cv::drawMatches(cv::InputArray, const std::vector<cv::KeyPoint>&, cv::InputArray, const std::vector<cv::KeyPoint>&, const std::vector<cv::DMatch>&, cv::InputOutputArray, const Scalar&, const Scalar&, const std::vector<char>&, int)
 CV_EXPORTS_W void drawMatches( InputArray img1, const std::vector<KeyPoint>& keypoints1,
                   ^
/opt/opencv3/include/opencv2/features2d.hpp:1104:19: note:   no known conversion for argument 5 from ‘std::vector<int>’ to ‘const std::vector<cv::DMatch>&’
/opt/opencv3/include/opencv2/features2d.hpp:1111:36: note: void cv::drawMatches(cv::InputArray, const std::vector<cv::KeyPoint>&, cv::InputArray, const std::vector<cv::KeyPoint>&, const std::vector<std::vector<cv::DMatch> >&, cv::InputOutputArray, const Scalar&, const Scalar&, const std::vector<std::vector<char> >&, int)
 CV_EXPORTS_AS(drawMatchesKnn) void drawMatches( InputArray img1, const std::vector<KeyPoint>& keypoints1,
                                    ^
/opt/opencv3/include/opencv2/features2d.hpp:1111:36: note:   no known conversion for argument 5 from ‘std::vector<int>’ to ‘const std::vector<std::vector<cv::DMatch> >&’
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
